--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,10 +14,10 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           # If your repository depends on submodule, please see: https://github.com/actions/checkout
           submodules: recursive
-      - name: Use Node.js 22.x
+      - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: '20'
       - name: Cache NPM dependencies
         uses: actions/cache@v4
         with:
