--- a/themes/theme-particlex/_config.yml
+++ b/themes/theme-particlex/_config.yml
@@ -4,6 +4,8 @@
 # Avatar image
 avatar: /images/avatar.jpg
 
+author: Your Name
+
 # Home page background image
 background:
     - /images/background.jpg
@@ -47,7 +49,6 @@ menu:
 
 # Side info card
 card:
-    name: Leventure
     enable: true
     description: |
         Average Audio & CV Developer
