--- a/themes/theme-particlex/package.json
+++ b/themes/theme-particlex/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hexo-theme-particlex",
   "version": "2.8.1",
-  "description": "A concise Hexo theme, based on Particle.",
+  "description": "keep Going.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,7 @@
     "waline",
     "giscus"
   ],
-  "author": "Argvchs",
+  "author": "Huxley",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/theme-particlex/hexo-theme-particlex/issues"
