--- a/themes/particlex/_config.yml
+++ b/themes/particlex/_config.yml
@@ -52,7 +52,7 @@ card:
         一般通过 Audio & CV Developer
     iconLinks:
     friendLinks:
-        Argvchs: https://leventureqys.github.io/
+        LeventureQys: https://leventureqys.github.io/
 
 # Footer info
 footer:
