--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,70 +1,80 @@
-name: Deploy Hugo PaperMod Demo to Pages
+name: Deploy Hugo Site to GitHub Pages
 
 on:
   push:
-    paths-ignore:
-      - "images/**"
-      - "LICENSE"
-      - "README.md"
     branches:
-      - master
-      - exampleSite
+      - master  # 改为你的主分支
   workflow_dispatch:
-    # manual run
+    # 手动触发
     inputs:
       hugoVersion:
         description: "Hugo Version"
         required: false
-        default: "0.146.0"
+        default: "0.152.2"
 
-# Allow one concurrent deployment
+# 允许一个并发部署
 concurrency:
   group: "pages"
   cancel-in-progress: true
 
-# Default to bash
+# 默认使用 bash
 defaults:
   run:
     shell: bash
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# 设置 GITHUB_TOKEN 权限以部署到 GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
 jobs:
-  # Build job
+  # 构建任务
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: ${{ github.event.inputs.hugoVersion || '0.146.0' }}
+      HUGO_VERSION: ${{ github.event.inputs.hugoVersion || '0.152.2' }}  # 更新为你的版本
     steps:
-      - name: Install Hugo CLI
+      - name: 安装 Hugo CLI
         run: |
-          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_linux-amd64.deb \
+          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-      - name: Checkout
+          
+      - name: 检出代码
         uses: actions/checkout@v4
         with:
-          ref: exampleSite
-      - name: Setup Pages
+          submodules: recursive  # 自动处理子模块
+          token: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: 设置 Pages
         id: pages
         uses: actions/configure-pages@v5
-      - name: Get Theme
-        run: git submodule update --init --recursive
-      - name: Update theme to Latest commit
-        run: git submodule update --remote --merge
-      - name: Build with Hugo
+        
+      - name: 检查 Hugo 版本
+        run: hugo version
+        
+      - name: 安装依赖（如果需要）
+        run: |
+          # 如果有 package.json 可以安装依赖
+          # npm install
+          echo "依赖安装完成"
+          
+      - name: 构建 Hugo 站点
         run: |
           hugo \
-            --buildDrafts --gc \
-            --baseURL ${{ steps.pages.outputs.base_url }}
-      - name: Upload artifact
+            --gc \
+            --minify \
+            --baseURL "${{ steps.pages.outputs.base_url }}"
+            
+      - name: 创建 .nojekyll 文件
+        run: touch ./public/.nojekyll
+        
+      - name: 上传构建产物
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
-  # Deployment job
+
+  # 部署任务
   deploy:
     environment:
       name: github-pages
@@ -72,6 +82,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - name: 部署到 GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
