--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
+baseURL: https://leventureqys.github.io/
 languageCode: en-us
 title: LeventureTecTips
 theme: ["PaperMod"]
